--- a/INSTALL
+++ b/INSTALL
@@ -8,4 +8,4 @@ Pour installer cette version, veuillez suivre cette procédure:
 - Cliquez sur le (+) en haut à droite
 - Sélectionnez l’ePub
 
-L'ePub devrait alors apparaitre dans la bibliothèque après un cours chargement.
+L'ePub devrait alors apparaitre dans la bibliothèque après un court chargement.
